what is in production

--- a/etc/config/c++.defaults.properties
+++ b/etc/config/c++.defaults.properties
@@ -19,16 +19,18 @@ compiler.lcgg730.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-7.3.0
 compiler.lcgg710.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-7.1.0
 compiler.lcgg810.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-8.1.0
 
-group.lcgclang.compilers=lcgclang600
+group.lcgclang.compilers=lcgclang600:hack
 group.lcgclang.groupName=lcg-clang++
 
 compiler.lcgclang600.name=lcg-clang++-6.0.0
 compiler.lcgclang600.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-clang++-6.0.0
 
-group.lcgg.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_LINKER_LIBRARY -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wsuggest-override -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
-compiler.lcgg493.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_LINKER_LIBRARY -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -fdiagnostics-color -O3 -DNDEBUG -fPIC 
+group.lcgg.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wsuggest-override -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
+compiler.lcgg493.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -fdiagnostics-color -O3 -DNDEBUG -fPIC 
 
-
+compiler.hack.name=hacked clang 6.0.0 with gcc 7.3.0 binutils
+compiler.hack.exe=/home/pseyfert/hack
+compiler.hack.options=--gcc-toolchain=/cvmfs/sft.cern.ch/lcg/releases/clang/6.0.0-6647e/x86_64-centos7-gcc62-opt/../../../gcc/7.3.0-90605/x86_64-centos7-gcc62-opt -DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
 
 postProcess=
 demangler=c++filt
