--- a/etc/config/compiler-explorer.defaults.properties
+++ b/etc/config/compiler-explorer.defaults.properties
@@ -17,6 +17,7 @@ localStorageFolder=./lib/storage/data/
 
 demanglerClassFile=./demangler
 
+max-asm-size=33554432
 wine=/opt/wine-devel/bin/wine64
 python3=/usr/bin/python3
 
@@ -27,8 +28,9 @@ textBanner=Compilation provided by Compiler Explorer at https://godbolt.org/
 # verify that these work
 formatters=clangformat
 formatter.clangformat.name=clang-format
-formatter.clangformat.exe=/usr/bin/clang-format
-formatter.clangformat.styles=Google:LLVM:Mozilla:Chromium:WebKit:Gaudi:ROOT
+formatter.clangformat.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-clang-format-3.9
+formatter.clangformat.styles=file:ROOT:Gaudi
+#Google:LLVM:Mozilla:Chromium:WebKit:Gaudi:ROOT:file
 #{ Language:      Cpp ,BasedOnStyle:  LLVM ,AccessModifierOffset: -2 ,AlignConsecutiveAssignments: true ,AlignConsecutiveDeclarations: true ,AlignEscapedNewlinesLeft: false ,AlignTrailingComments: true ,AllowAllParametersOfDeclarationOnNextLine: true ,AllowShortIfStatementsOnASingleLine: true ,AllowShortLoopsOnASingleLine: true ,AlwaysBreakBeforeMultilineStrings: false ,AlwaysBreakTemplateDeclarations: true ,BinPackParameters: true ,BreakBeforeBinaryOperators: false ,BreakBeforeBraces: Linux ,BreakBeforeTernaryOperators: true ,BreakConstructorInitializersBeforeComma: true ,ColumnLimit:     120 ,ConstructorInitializerAllOnOneLineOrOnePerLine: true ,ConstructorInitializerIndentWidth: 4 ,ContinuationIndentWidth: 4 ,Cpp11BracedListStyle: true ,DerivePointerBinding: false ,ExperimentalAutoDetectBinPacking: false ,IndentCaseLabels: false ,IndentFunctionDeclarationAfterType: false ,IndentWidth:     5 ,MaxEmptyLinesToKeep: 1 ,NamespaceIndentation: All ,ObjCSpaceBeforeProtocolList: true ,PenaltyBreakBeforeFirstCallParameter: 19 ,PenaltyBreakComment: 60 ,PenaltyBreakFirstLessLess: 120 ,PenaltyBreakString: 1000 ,PenaltyExcessCharacter: 1000000 ,PenaltyReturnTypeOnItsOwnLine: 60 ,PointerBindsToType: true ,SpaceAfterControlStatementKeyword: true ,SpaceBeforeAssignmentOperators: true ,SpaceInEmptyParentheses: false ,SpacesBeforeTrailingComments: 1 ,SpacesInAngles:  false ,SpacesInCStyleCastParentheses: false ,SpacesInParentheses: true ,Standard:        Cpp11 ,TabWidth:        8 ,UseTab:          Never }
 
 # If you run your own public instance of Compiler Explorer you are encouraged to write your own cookie policy and
