add IWYU as tool

--- a/etc/config/c++.defaults.properties
+++ b/etc/config/c++.defaults.properties
@@ -17,3 +17,17 @@ stubText=int main(void){return 0;/*stub provided by Compiler Explorer*/}
 #################################
 # Installed libs (See c++.amazon.properties for a scheme of libs group)
 libs=
+
+tools=clangtidytrunk:iwyu
+
+tools.iwyu.exe=/home/pseyfert/.local/bin/include-what-you-use-null
+tools.iwyu.name=include-what-you-use
+tools.iwyu.type=independent
+tools.iwyu.class=iwyu
+tools.clangtidytrunk.exe=/usr/bin/clang-tidy
+tools.clangtidytrunk.name=clang-tidy
+tools.clangtidytrunk.type=independent
+tools.clangtidytrunk.class=clang-tidy-tool
+tools.clangtidytrunk.exclude=cl19:cl_new
+# tools.clangtidy.options=--gcc-toolchain=/usr/bin/gcc
+# tools.clangtidy.options=--gcc-toolchain=/opt/compiler-explorer/gcc-8.2.0
