--- a/etc/config/c++.defaults.properties
+++ b/etc/config/c++.defaults.properties
@@ -1,8 +1,23 @@
-compilers=&lcgg:&lcgclang
+compilers=&lcgg:&lcgclang:&icc:&hacks:&autogen
 defaultCompiler=lcgg730
 
 group.lcgg.compilers=lcgg493:lcgg720:lcgg820:lcgg620:lcgg730:lcgg710:lcgg810
 group.lcgg.groupName=lcg-g++
+
+group.hacks.compilers=hack
+group.hacks.groupName=somehacks
+group.hacks.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
+
+compiler.hack.name=clang 7 preview
+compiler.hack.exe=/home/pseyfert/hack
+
+group.icc.compilers=icc19
+group.icc.groupName=ICC
+group.icc.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -O3 -DNDEBUG -fPIC 
+
+compiler.icc19.name=icc 19.0.0.117
+compiler.icc19.exe=/home/pseyfert/.local/bin/icc
+
 
 compiler.lcgg493.name=lcg-g++-4.9.3
 compiler.lcgg720.name=lcg-g++-7.2.0
@@ -23,7 +38,6 @@ group.lcgclang.compilers=lcgclang600
 group.lcgclang.groupName=lcg-clang++
 
 compiler.lcgclang600.name=lcg-clang++-6.0.0
-compiler.lcgclang600.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-clang++-6.0.0
 compiler.lcgclang600.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-clang++-6.0.0
 
 group.lcgg.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wsuggest-override -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
@@ -48,3 +62,9 @@ stubText=int main(void){return 0;/*stub provided by Compiler Explorer*/}
 #################################
 # Installed libs (See c++.amazon.properties for a scheme of libs group)
 libs=
+group.autogen.compilers=brunel
+group.autogen.groupName=auto-generated compiler settings
+compiler.brunel.name=Brunel
+# compiler.brunel.exe=/cvmfs/lhcb.cern.ch/lib/lhcb/LBSCRIPTS/LBSCRIPTS_v9r2p7/InstallArea/scripts/lcg-g++-7.3.0
+compiler.brunel.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-7.3.0
+compiler.brunel.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="BrunelCache" -DPACKAGE_VERSION="HEAD" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wnon-virtual-dtor -Wsuggest-override -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC -L/cvmfs/lhcbdev.cern.ch/nightlies/lhcb-head/Yesterday/BRUNEL/BRUNEL_HEAD/InstallArea/x86_64+avx2+fma-centos7-gcc7-opt/lib -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/Python/2.7.15/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/ROOT/6.14.04/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/tbb/2018_U1/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/HepMC/2.06.09/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcbdev.cern.ch/nightlies/lhcb-head/Yesterday/REC/REC_HEAD/InstallArea/x86_64+avx2+fma-centos7-gcc7-opt/lib -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/clhep/2.4.1.0/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/GSL/2.5/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/Boost/1.66.0/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/LCG_94/XercesC/3.1.3/x86_64-centos7-gcc7-opt/lib/ -L/cvmfs/lhcbdev.cern.ch/nightlies/lhcb-head/Yesterday/LBCOM/LBCOM_HEAD/InstallArea/x86_64+avx2+fma-centos7-gcc7-opt/lib -L/cvmfs/lhcbdev.cern.ch/nightlies/lhcb-head/Yesterday/LHCB/LHCB_HEAD/InstallArea/x86_64+avx2+fma-centos7-gcc7-opt/lib -L/cvmfs/lhcbdev.cern.ch/nightlies/lhcb-head/Yesterday/GAUDI/GAUDI_master/InstallArea/x86_64+avx2+fma-centos7-gcc7-opt/lib -ltbb -lCLHEP-RandomObjects-2.4.1.0 -lCaloUtils -lCaloFutureUtils -lDetDescLib -lGpad -lRichRecUtils -lRichFutureMCUtilsLib -lGaudiObjDescLib -lRichDAQKernel -lGaudiKernel -lRichFutureRecBase -lboost_filesystem -lCaloDetLib -lHltEvent -lRecEvent -lstdc++fs -lTsaKernel -lSTKernelLib -lLoKiMCLib -lTest_GaudiPluginService_LegacyUseCasesLib -lGaudiPythonLib -lCLHEP-Random-2.4.1.0 -lRichFutureRecEvent -lTrackFitEvent -lFileStagerFunctions -lL0MuonKernel -lUTDAQLib -lLHCbKernel -lBcmDetLib -lNet -lRichFutureKernel -lLoKiTrack_v2Lib -lCLHEP-Vector-2.4.1.0 -lCLHEP-Exceptions-2.4.1.0 -lboost_date_time -lMDFLib -lPhysEvent -lVeloDetLib -lGaudiAlgLib -lGraf3d -lGaudiPluginService -lGenEvent -lgsl -lboost_chrono -lCLHEP-Evaluator-2.4.1.0 -lCLHEP-RefCount-2.4.1.0 -lLHCbMathLib -lXMLIO -lRichKernelLib -lDAQKernelLib -lgslcblas -lCLHEP-Cast-2.4.1.0 -lRIO -lMathCore -lxerces-c -lCore -lSTTELL1Event -lMuonDetLib -lChargedProtoANNPID-yPIDLib -lMDF_ROOT -lPhysInterfacesLib -lMicroDstLib -lGaudiGSLLib -lCLHEP-Geometry-2.4.1.0 -lCLHEP-Matrix-2.4.1.0 -lMuonIDLib -lGraf -lUTKernelLib -lFTDAQLib -lXmlToolsLib -lTrackEvent -lOTDetLib -lRichUtils -lHltDAQLib -lTest_GaudiPluginService_UseCasesLib -lHist -lMCEvent -lGaudiExamplesLib -lGaudiMPLib -lTreePlayer -lvdt -lboost_system -lVPDetLib -lEventPackerLib -lUTDetLib -lHepMC -lVectorClassLib -lLoKiCoreLib -lGenVector -lMuonInterfacesLib -lSTDetLib -lFTDetLib -lGaudiUtilsLib -lMatrix -lPrKernel -lRichDetLib -lRichFutureUtils -lLinkerEvent -lTrackVectorFit -lProcessorKernel -lPrFitParamsLib -lpython2.7 -lLoKiTrackLib -lThread -lboost_thread -lTrackKernel -lPartPropLib -lL0Base -lDetDescCnvLib -ldl -lboost_atomic -lLoKiHltLib -lboost_regex -lMuonKernelLib -lRootCnvLib -lTree -lL0Event -lHltInterfaces -lRelationsLib -lGaudiCommonSvcLib -lCLHEP-GenericFunctions-2.4.1.0 -lLoKiGenLib -lboost_iostreams -lUTTELL1Event -lDAQEventLib
