adding clang7 in more properly

--- a/etc/config/c++.defaults.properties
+++ b/etc/config/c++.defaults.properties
@@ -6,14 +6,14 @@ group.lcgg.groupName=lcg-g++
 
 group.hacks.compilers=hack
 group.hacks.groupName=somehacks
-group.hacks.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
+group.hacks.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC
 
 compiler.hack.name=clang 7 preview
 compiler.hack.exe=/home/pseyfert/hack
 
 group.icc.compilers=icc19
 group.icc.groupName=ICC
-group.icc.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -O3 -DNDEBUG -fPIC 
+group.icc.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -O3 -DNDEBUG -fPIC
 
 compiler.icc19.name=icc 19.0.0.117
 compiler.icc19.exe=/home/pseyfert/.local/bin/icc
@@ -34,16 +34,19 @@ compiler.lcgg730.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-7.3.0
 compiler.lcgg710.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-7.1.0
 compiler.lcgg810.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-g++-8.1.0
 
-group.lcgclang.compilers=lcgclang600
+group.lcgclang.compilers=lcgclang600:lcgclang700
 group.lcgclang.groupName=lcg-clang++
 
 compiler.lcgclang600.name=lcg-clang++-6.0.0
 compiler.lcgclang600.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-clang++-6.0.0
 
-group.lcgg.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wsuggest-override -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
-compiler.lcgg493.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -fdiagnostics-color -O3 -DNDEBUG -fPIC 
+compiler.lcgclang700.name=lcg-clang++-7.0.0
+compiler.lcgclang700.exe=/cvmfs/lhcb.cern.ch/lib/bin/x86_64-centos7/lcg-clang++-7.0.0
 
-compiler.lcgclang600.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC 
+group.lcgg.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -Wsuggest-override -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC
+compiler.lcgg493.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -fdiagnostics-color -O3 -DNDEBUG -fPIC
+
+group.lcgclang.options=-DBOOST_FILESYSTEM_VERSION=3 -DBOOST_SPIRIT_USE_PHOENIX_V3 -DGAUDI_V20_COMPAT -DPACKAGE_NAME="CompilerExplorer" -DPACKAGE_VERSION="v0r0" -D_GNU_SOURCE -Df2cFortran -Dlinux -Dunix -mavx2 -mfma -fmessage-length=0 -pipe -Wall -Wextra -Werror=return-type -pthread -pedantic -Wwrite-strings -Wpointer-arith -Woverloaded-virtual -std=c++17 -fdiagnostics-color -O3 -DNDEBUG -fPIC
 compiler.lcgclang600.iwyuExe=/home/pseyfert/.local/bin/include-what-you-use
 
 postProcess=
